--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,14 @@ jobs:
         id: extract_branch
         shell: bash
         # run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/}) >> $GITHUB_ENV"
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})"
       - name: Get branch name
         run: echo 'The branch name is' $BRANCH_NAME
-      - name: 'Build:dockerimage'
-        uses: docker/build-push-action@v1
-        with:
-          registry: ghcr.io
-          username: "Loki-Afro"
-          password: ${{ secrets.GH_REGISTRY_SECRET }}
-          repository: kaffeekrone/mail-drop
-          tags: main
+      #- name: 'Build:dockerimage'
+      #  uses: docker/build-push-action@v1
+      #  with:
+      #    registry: ghcr.io
+      #    username: "Loki-Afro"
+      #    password: ${{ secrets.GH_REGISTRY_SECRET }}
+      #    repository: kaffeekrone/mail-drop
+      #    tags: main
