--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,12 @@ jobs:
         shell: bash
         # run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
         #run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/}) >> $GITHUB_ENV"
-        run:  echo "action_state=yellow" >> $GITHUB_ENV
+        #run:  echo "action_state=yellow" >> $GITHUB_ENV
+        run: echo "branch_name=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
       - name: Get branch name
         #run: echo 'The branch name is' $BRANCH_NAME
         #run: echo "${{ env.BRANCH_NAME }}" # This will output 'yellow'
-        run: echo "${{ env.action_state }}" # This will output 'yellow'
+        run: echo "${{ env.branch_name }}" # This will output 'yellow'
       #- name: 'Build:dockerimage'
       #  uses: docker/build-push-action@v1
       #  with:
