--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,19 +19,14 @@ jobs:
       - name: "Extract git ref"
         id: extract_branch
         shell: bash
-        # run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
-        #run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/}) >> $GITHUB_ENV"
-        #run:  echo "action_state=yellow" >> $GITHUB_ENV
         run: echo "branch_name=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-      - name: Get branch name
-        #run: echo 'The branch name is' $BRANCH_NAME
-        #run: echo "${{ env.BRANCH_NAME }}" # This will output 'yellow'
-        run: echo "${{ env.branch_name }}" # This will output 'yellow'
-      #- name: 'Build:dockerimage'
-      #  uses: docker/build-push-action@v1
-      #  with:
-      #    registry: ghcr.io
-      #    username: "Loki-Afro"
-      #    password: ${{ secrets.GH_REGISTRY_SECRET }}
-      #    repository: kaffeekrone/mail-drop
-      #    tags: main
+      #- name: Get branch name
+      #  run: echo "${{ env.branch_name }}"
+      - name: 'Build:dockerimage'
+        uses: docker/build-push-action@v1
+        with:
+          registry: ghcr.io
+          username: "Loki-Afro"
+          password: ${{ secrets.GH_REGISTRY_SECRET }}
+          repository: kaffeekrone/mail-drop
+          tags: ${{ env.branch_name }}
