--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -1,5 +1,5 @@
 
-name: Push docker image
+name: Build & Push docker image
 
 on:
   push:
@@ -16,14 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Build:checkout"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: "Extract git ref"
-        id: extract_branch
+        id: extract_ref
         shell: bash
-        #run: echo "git_ref_name=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
         run: echo "git_ref_name=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-      #- name: Get branch name
-      #  run: echo "${{ env.git_ref_name }}"
       - name: 'Build:dockerimage'
         uses: docker/build-push-action@v1
         with:
