--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  mvn-verify:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
