--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -17,3 +17,23 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn verify
+  trivy-verify:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Build an image from Dockerfile
+      run: docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@0.7.1
+      with:
+        image-ref: 'ghcr.io/${{ github.repository_owner }}/${{ inputs.image_name }}@${{ steps.docker_build_push.outputs.digest }}'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+        severity: 'CRITICAL,HIGH'
+        exit-code: 1
+        ignore-unfixed: true
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      if: always() #cause trivy will exit with non-zero if it found something
+      with:
+        sarif_file: 'trivy-results.sarif'
