--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: false
-        tags: ${{ github.repository_owner }}/mail-drop:${{ github.sha }}
+        tags: ghcr.io/${{ github.repository_owner }}/mail-drop:${{ github.sha }}
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@0.7.1
       with:
