--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -26,11 +26,12 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: false
-        tags: ghcr.io/${{ github.repository_owner }}/mail-drop:${{ github.sha }}
+        #tags: ghcr.io/${{ github.repository_owner }}/mail-drop:${{ github.sha }}
+        tags: phi-test
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@0.7.1
       with:
-        image-ref: 'ghcr.io/${{ github.repository_owner }}/mail-drop@${{ github.sha }}'
+        image-ref: phi-test
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH'
