--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>de.kaffeekrone</groupId>
     <artifactId>mail-drop</artifactId>
-    <version>2.0</version>
+    <version>2.1-SNAPSHOT</version>
     <name>mail-drop</name>
     <properties>
         <java.version>22</java.version>
